--- a/src/components/Sphere.css
+++ b/src/components/Sphere.css
@@ -7,7 +7,6 @@
 }
 .box:hover{
    animation-play-state: paused;
-   transform: scale(1.5);
 }
 @keyframes rotate{
     0%{
@@ -36,4 +35,8 @@
     height: 100%;
     object-fit: cover;
 }
-
+.space{
+    overflow-y: hidden;
+    height: 100vh;
+    width: 100vw;
+}
